# pastebin-actix

./: .gitignore  Cargo.toml
src/: main.rs
static/: webupload.html
templates/: help.html  index.html  paste_html.html
